@@ -1,3 +1,4 @@
 
-Sep 19     7:45 AM
+Sep 19     1:45 PM
+Sep 19     7:45 AM      9:15 AM     1.5
 Sep 18     8    PM     10    PM     2
